add /api/stat/links (GET)
